--- a/src/components/LandingParent/LandingParent.css
+++ b/src/components/LandingParent/LandingParent.css
@@ -14,6 +14,22 @@
     background: #0E131B; 
 }
 
+.animation_container {
+    width: 80%; 
+    height: 50%;
+    margin-top: 12.5%; 
+    margin-left: 10%; 
+    background: #1A202B; 
+    border-radius: 10px; 
+    z-index: 10px;
+    /* border-color: rgb(28, 224, 55);  */
+}
+
+.script_container {
+    width: 80%; 
+    height: 50%;
+}
+
 .Main_two {
     width: 100%; 
     height: 100vh; 
