--- a/src/components/LandingParent/LandingParent.css
+++ b/src/components/LandingParent/LandingParent.css
@@ -25,16 +25,34 @@
     /* border-color: rgb(28, 224, 55);  */
 }
 
-.animation_box_one {
-    width: 50; 
-    height: 50; 
-    background: rgb(88, 88, 235); 
+.animation_container > div {
+    position: absolute; 
 }
 
 .Main_two {
     width: 100%; 
     height: 100vh; 
     background: #1A202B; 
+    /* display: flex; 
+    flex-direction: column;  */
+}
+
+.Main_two > p {
+    color: white;
+    text-align: center; 
+    font-size: 36px; 
+    margin-top: 25px; 
+}
+
+.animation_container_two {
+    width: 80%; 
+    height: 50%;
+    margin-top: 50px;
+    margin-left: 10%; 
+    background: #0E131B;
+    border-radius: 10px; 
+    z-index: 10px;
+    /* border-color: rgb(28, 224, 55);  */
 }
 
 .Main_three {
@@ -48,3 +66,65 @@
     height: 100vh; 
     background: #1A202B;
 }
+
+/* Scroll view */
+
+.scroll_child {
+    width: 300px; 
+    margin-right: 50px; 
+    margin-left: 30px; 
+    margin-top: 15px; 
+    height: 80%;
+    background: rgb(55, 90, 145); 
+    border-radius: 10px; 
+    color: white; 
+    font-family: 'Courier New', Courier, monospace; 
+    box-shadow: 5px 10px #80acd6;
+}
+
+.top_scroll_container {
+    display: flex; 
+    flex-direction: column; 
+    height: 50%; 
+    width: 100%; 
+    text-align: center; 
+}
+
+.top_scroll_container > p {
+    margin-top: 10px; 
+    margin-bottom: 10px; 
+}
+
+.main_image {
+    max-width: 100%;
+    max-height: 60%; 
+}
+
+.bottom_scroll_container {
+    display: flex; 
+    flex-direction: column; 
+    text-align: center; 
+    width: 100%; 
+    height: 40%; 
+}
+
+.bottom_scroll_container > div > img {
+    max-width: 50px; 
+    max-height: 50px; 
+    margin-bottom: 0px; 
+    margin-left: 10px; 
+    border-radius: 25px; 
+}
+
+.bottom_scroll_container > div > p {
+    text-align: center; 
+    width: 200px; 
+}
+
+.bottom_scroll_container > div {
+    display: flex; 
+    flex-direction: row; 
+    width: 100%; 
+}
+
+
