--- a/src/components/ChatLobby/chatLobby.css
+++ b/src/components/ChatLobby/chatLobby.css
@@ -1,3 +1,7 @@
+/*
+    To-Do:  Move all % and numbers into variables in SCSS files.  That way we can tweak all from one place.
+*/
+
 .lobby-container {
     width: 100%;
     height: calc(100vh - 100px); /* Calculate banner height */
@@ -7,8 +11,13 @@
 }
 .chat-box {
     width: 90%;
+    max-width: 1000px;
     background-color:rgb(14, 19, 27);
     height: 90%;
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .message-display {
@@ -24,15 +33,14 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    height: 30px;
+}
+.chat-box .input-box button {
+    height: 100%;
+    width: 10%;
 }
 
 .chat-box .input-box input {
     width: 100%;
-}
-
-
-@media screen and (min-width: 400px) {
-    .chat-box{
-        max-width: 1000px;
-    }
+    height: 100%;
 }
