--- a/src/components/LandingParent/LandingParent.css
+++ b/src/components/LandingParent/LandingParent.css
@@ -42,22 +42,25 @@
     flex-direction: column;  */
 }
 
-.Main_two > p {
+.type_header {
     color: white;
     text-align: center; 
     font-size: 36px; 
     margin-top: 25px; 
+    font-family: 'Courier New', Courier, monospace; 
+    font-weight: bold; 
 }
 
 .animation_container_two {
     width: 80%; 
-    height: 50%;
+    height: 70%;
     margin-top: 50px;
     margin-left: 10%; 
     background: #0E131B;
     border-radius: 10px; 
     z-index: 10px;
     /* border-color: rgb(28, 224, 55);  */
+    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
 }
 
 .Main_three {
@@ -84,13 +87,13 @@
     border-radius: 10px; 
     color: white; 
     font-family: 'Courier New', Courier, monospace; 
-    box-shadow: 5px 10px #80acd6;
+    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
 }
 
 .top_scroll_container {
     display: flex; 
     flex-direction: column; 
-    height: 50%; 
+    height: 70%; 
     width: 100%; 
     text-align: center; 
 }
@@ -110,7 +113,7 @@
     flex-direction: column; 
     text-align: center; 
     width: 100%; 
-    height: 40%; 
+    height: 30%; 
 }
 
 .bottom_scroll_container > div > img {
@@ -131,5 +134,18 @@
     flex-direction: row; 
     width: 100%; 
 }
+
+/* .react_card_flip {
+    width: 300px; 
+    margin-right: 50px; 
+    margin-left: 30px; 
+    margin-top: 15px; 
+    height: 80%;
+    background: rgb(55, 90, 145); 
+    border-radius: 10px; 
+    color: white; 
+    font-family: 'Courier New', Courier, monospace; 
+    box-shadow: 5px 10px #80acd6;
+} */
 
 
