--- a/src/components/LandingParent/LandingParent.css
+++ b/src/components/LandingParent/LandingParent.css
@@ -115,7 +115,7 @@
     background: #1A202B;
 }
 
-/* Scroll view */
+/* Scroll view --- MOVE TO OWN COMPONENT --- */ 
 
 .scroll_child {
     width: 300px; 
@@ -123,6 +123,13 @@
     margin-left: 30px; 
     margin-top: 15px; 
     height: 80%;
+    background: transparent; 
+    border-radius: 10px; 
+}
+
+.flip_container {
+    width: 100%; 
+    height: 100%; 
     background: rgb(55, 90, 145); 
     border-radius: 10px; 
     color: white; 
@@ -133,12 +140,11 @@
     transform-style: preserve-3d;
     position: relative;
     perspective: 1000px; 
-
 }
 
 .top_scroll_container {
-    display: flex; 
-    flex-direction: column; 
+    /* display: flex; 
+    flex-direction: column;  */
     height: 70%; 
     width: 100%; 
     text-align: center; 
@@ -155,8 +161,8 @@
 }
 
 .bottom_scroll_container {
-    display: flex; 
-    flex-direction: column; 
+    /* display: flex; 
+    flex-direction: column;  */
     text-align: center; 
     width: 100%; 
     height: 30%; 
@@ -194,7 +200,83 @@
     box-shadow: 5px 10px #80acd6;
 } */
 
-.scroll_child:hover {
+.flip_container:hover {
     transform: rotateY(180deg); 
 }
 
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+    left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
+}
+
+.back {
+    /* display: flex;  */
+    /* flex-direction: column;  */
+    margin: auto; 
+    width: 100%; 
+    height: 100%;
+    /* position: absolute; */
+    background: rgb(6, 79, 119); 
+}
+
+.back > button {
+    width: 50%; 
+    margin-left: 25%; 
+    background: #1A202B; 
+    height: 50px;
+    color: #1896DA; 
+    border-color: #1896DA; 
+    border-radius: 5px; 
+    font-size: 16px; 
+    font-family: 'Courier New', Courier, monospace; 
+    font-weight: bold;
+}
+
+.back > p {
+    text-align: center; 
+}
+
+.back > button:hover {
+    background: #1896DA; 
+    color: white; 
+} 
+
+@media screen and (max-width: 700px) {
+    .animation_container > div > img {
+        max-width: 40px; 
+        max-height: 40px; 
+    }
+    .type_header_top {
+        font-size: 24px;      
+    }
+    .scroll_child {
+        width: 150px; 
+        height: 80%;
+    }
+    .flip_container {
+        width: 100%; 
+        height: 100%; 
+    }
+    .front, back {
+        width: 150px; 
+    }
+    /* .main_image {
+        max-width: 50%;
+        max-height: 60%; 
+    } */
+}
