Added Event Card Mapping of False Object

--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -34,4 +34,11 @@ body {
             // background: hotpink; 
         }
     }
+
+    // .events h1.white-text{
+    //     color: #fff;
+    // }
+        
+    
 }
+
