Adding css for event card viewing

--- a/src/components/User/Profile/profile.css
+++ b/src/components/User/Profile/profile.css
@@ -78,3 +78,12 @@
 }
 
 #bio {display:block;}
+
+.profile-container #events {
+    padding: 15px;
+    width: 100%;
+}
+
+.profile-container #events > * + * {
+    margin-top: 10px;
+}
