--- a/src/components/LandingParent/LandingParent.css
+++ b/src/components/LandingParent/LandingParent.css
@@ -1,3 +1,6 @@
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
+
 .Main_container {
     padding-top: 0px; 
     background: transparent; 
@@ -103,6 +106,24 @@
     box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
 }
 
+.animation_container_three {
+    width: 80%; 
+    height: 70%;
+    margin-top: 50px;
+    margin-left: 10%; 
+    background: rgba(23, 23, 53, 0.5); 
+    border-radius: 10px; 
+    z-index: 10px;
+    /* border-color: rgb(28, 224, 55);  */
+    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
+}
+
+.slick_slider {
+    margin-top: 10px; 
+    height: 100%;
+    background: #1A202B; 
+}
+
 .Main_three {
     width: 100%; 
     height: 100vh; 
@@ -118,28 +139,49 @@
 /* Scroll view --- MOVE TO OWN COMPONENT --- */ 
 
 .scroll_child {
-    width: 300px; 
-    margin-right: 50px; 
-    margin-left: 30px; 
+    height: 350px;
     margin-top: 15px; 
-    height: 80%;
     background: transparent; 
+}
+
+.slick-list {
+    height: 80%;
+    padding-top: 5%; 
+}
+
+.slick-arrow.slick-prev, .slick-arrow.slick-next {
+    background: #1896DA; 
+    width: 40px; 
+    height: 40px;
+    margin: auto; 
+    border-radius: 20px; 
+}
+
+.slick-arrow.slick-prev > img, .slick-arrow.slick-next > img {
+    max-width: 40px; 
+    max-height: 40px; 
+}
+
+.slick-dots > li  {
+    background: rgb(85, 82, 240); 
     border-radius: 10px; 
 }
 
 .flip_container {
-    width: 100%; 
-    height: 100%; 
+    width: 80%; 
+    height: 80%; 
+    margin-top: 10%; 
+    margin-left: 10%; 
     background: rgb(55, 90, 145); 
     border-radius: 10px; 
     color: white; 
     font-family: 'Courier New', Courier, monospace; 
-    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
     font-weight: bold; 
     transition: 0.6s;
     transform-style: preserve-3d;
     position: relative;
     perspective: 1000px; 
+    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
 }
 
 .top_scroll_container {
@@ -157,7 +199,10 @@
 
 .main_image {
     max-width: 100%;
-    max-height: 60%; 
+    max-height: 120px; 
+    margin: auto; 
+    display: block; 
+    border-radius: 5px; 
 }
 
 .bottom_scroll_container {
@@ -186,19 +231,6 @@
     flex-direction: row; 
     width: 100%; 
 }
-
-/* .react_card_flip {
-    width: 300px; 
-    margin-right: 50px; 
-    margin-left: 30px; 
-    margin-top: 15px; 
-    height: 80%;
-    background: rgb(55, 90, 145); 
-    border-radius: 10px; 
-    color: white; 
-    font-family: 'Courier New', Courier, monospace; 
-    box-shadow: 5px 10px #80acd6;
-} */
 
 .flip_container:hover {
     transform: rotateY(180deg); 
