event detail setup

--- a/src/components/LandingParent/LandingParent.scss
+++ b/src/components/LandingParent/LandingParent.scss
@@ -306,7 +306,7 @@
         width: 100%; 
         height: 100%; 
     }
-    .front, back {
+    .front, .back {
         width: 150px; 
     }
     /* .main_image {
