--- a/src/components/Event/EventDisplay/EventDisplay.scss
+++ b/src/components/Event/EventDisplay/EventDisplay.scss
@@ -61,3 +61,17 @@
     background: rgb(25, 18, 121); 
     color: white; 
 }
+
+.button_options_container > a {
+    width: 20%; 
+    height: 40px;
+    background: rgb(25, 18, 121); 
+    color: white;
+}
+
+.button_options_container > a > button {
+    width: 100%; 
+    height: 100%;
+    background: rgb(25, 18, 121); 
+    color: white;
+}
