--- a/src/components/Event/EventDisplay/EventDisplay.scss
+++ b/src/components/Event/EventDisplay/EventDisplay.scss
@@ -1,3 +1,4 @@
+
 .main_container {
     background: transparent; 
     width: 100%; 
@@ -22,13 +23,14 @@
     display: flex; 
     flex-direction: column; 
     width: 50%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
+    justify-content: space-evenly; 
 }
 
 .left_container > img {
     max-width: 80%; 
-    margin-top: 10px; 
+    margin-top: 30px; 
     margin-left: 10%; 
     border-radius: 10px; 
     max-height: 500px;
@@ -38,7 +40,8 @@
 .left_container > p {
     width: 80%; 
     margin-left: 10%; 
-    margin-top: 10px; 
+    margin-top: 30px; 
+    margin-bottom: 30px; 
     height: 30%;
     color: rgb(171, 162, 214); 
     font-family: 'Courier New', Courier, monospace; 
@@ -119,4 +122,78 @@
 
 .attendee_card > p {
     margin-top: 25px; 
+}
+
+// Right side
+.map_address_container {
+    width: 80%; 
+    height: 80%;
+    margin: auto; 
+    margin-top: 30px;   
+    border-radius: 10px; 
+    // padding-bottom: 10%; 
+    color: rgb(156, 156, 224);
+    display: flex; 
+    flex-direction: column; 
+    align-items: flex-start; 
+    justify-content: space-evenly;
+    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
+    overflow: hidden;
+}
+
+.map_container {
+    height: 250px;
+    width: 500px; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+}
+
+.top_image_and_text {
+    display: flex; 
+    flex-direction: row; 
+    // justify-content: space-evenly; 
+}
+
+.bottom_image_and_text {
+    display: flex; 
+    flex-direction: row; 
+    // justify-content: space-evenly; 
+}
+
+.top_image_and_text > img, .bottom_image_and_text > img {
+    max-width: 80px; 
+    max-height: 80px; 
+    margin-top: 10px; 
+    margin-left: 10px; 
+}
+
+.top_image_and_text > div > p, .bottom_image_and_text > div > p {
+    margin-top: 10px; 
+    margin-left: 30px; 
+    font-family: 'Courier New', Courier, monospace; 
+}
+
+.top_image_and_text > div > button, .bottom_image_and_text > div > button {
+    margin-top: 10px; 
+    margin-left: 30px; 
+    background: rgb(47, 47, 182); 
+    border-radius: 3px; 
+    color: white; 
+}
+
+//Map
+@import '../../../scss/_variables.scss';
+
+.mini_map-box {
+    margin-top: 10px; 
+    margin-bottom: 0px; 
+    max-width: 400px; 
+    max-height: 250px;
+    // margin-left: calc(100% - (400px / 2)); 
+    // margin-left: calc((100% - 400px) / 2); 
+}
+
+.hidden {
+    display: none;
 }
