--- a/src/components/EventSearch/eventsearch.scss
+++ b/src/components/EventSearch/eventsearch.scss
@@ -17,3 +17,33 @@
         padding-bottom: 12px;
     }
 }
+
+.no-search {
+    width: 80%;
+    margin: 120px auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    img {
+        height: 100%;
+        max-height: 200px;
+    }
+    h1 {
+    color: white;
+    font-size: 24px;
+    
+    }
+    a {
+        text-decoration: none;
+        color: black;
+        font-weight: 600;
+        height: 40px;
+        line-height: 40px;
+        font-size: 24px;
+        width: 140px;
+        background-color: #cacaca;
+    }
+}
