--- a/src/components/Event/EventHeader.scss
+++ b/src/components/Event/EventHeader.scss
@@ -91,3 +91,25 @@
     max-width: 40px; 
     max-height: 40px; 
 }
+
+// Media Queries
+@media screen and (max-width: 700px) {
+    .main_header_container, .title_container, .title_left, .title_right, .title_top, .attend_one {
+        font-size: 14px; 
+    }
+    .attend_two > button, .attend_three > button {
+        width: 50px; 
+    }
+    .attend_three > img {
+        margin-top: 20px; 
+        margin-right: 20px; 
+        max-width: 30px;
+        max-height: 30px; 
+    }
+    .title_left > img, .title_bottom > img {
+        margin-top: 20px; 
+        margin-right: 20px; 
+        max-width: 30px;
+        max-height: 30px; 
+    }
+}
