--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,7 @@ $darkGrey: #1A202B;
 $teal: #27E5E9;
 $blue: #1896DA;
 $dark: #0E131B;
+$terminalGreen: rgb(80, 219, 0);
 
 //  Fonts
 $mono: 'Courier New', Courier, monospace;
