--- a/src/components/Event/EventHeader.scss
+++ b/src/components/Event/EventHeader.scss
@@ -33,7 +33,16 @@
 .title_top {
     display: flex; 
     flex-direction: column; 
+    font-size: 24px; 
+}
+
+.title_top > p:nth-child(2) {
+    margin-top: 20px; 
     font-size: 36px; 
+}
+
+.title_top > p:nth-child(1) {
+    font-size: 24px; 
 }
 
 .title_bottom {
