--- a/src/components/LandingParent/LandingParent.scss
+++ b/src/components/LandingParent/LandingParent.scss
@@ -43,14 +43,13 @@
 }
 
 .animation_container > div > img {
-    max-width: 80px; 
-    max-height: 80px; 
-    /* border-radius: 40px; 
-    box-shadow: 5px 5px 5px 5px rgb(127, 189, 214); */
+    max-width: 70px; 
+    max-height: 70px; 
+    margin-right: 10px; 
 }
 
 .animation_container > div > input {
-    width: 50%; 
+    width: 40%; 
     height: 50px;
     border-radius: 10px; 
     background: rgb(6, 61, 150); 
@@ -58,6 +57,7 @@
     font-family: 'Courier New', Courier, monospace; 
     color: rgb(248, 248, 250); 
     font-size: 36px; 
+    margin-left: 15px; 
 }
 
 .type_header_top {
@@ -106,6 +106,8 @@
     box-shadow: 5px 5px 5px 5px rgb(127, 189, 214);
 }
 
+// TODO Can clean up since we've removed some things! 
+
 .animation_container_three {
     width: 80%; 
     height: 70%;
@@ -145,7 +147,7 @@
 }
 
 .slick-list {
-    height: 80%;
+    height: 100%;
     padding-top: 5%; 
 }
 
@@ -185,8 +187,6 @@
 }
 
 .top_scroll_container {
-    /* display: flex; 
-    flex-direction: column;  */
     height: 70%; 
     width: 100%; 
     text-align: center; 
@@ -206,8 +206,6 @@
 }
 
 .bottom_scroll_container {
-    /* display: flex; 
-    flex-direction: column;  */
     text-align: center; 
     width: 100%; 
     height: 30%; 
@@ -219,6 +217,11 @@
     margin-bottom: 0px; 
     margin-left: 10px; 
     border-radius: 25px; 
+}
+
+.bottom_scroll_container > p {
+    overflow: hidden;
+    max-height: 30px; 
 }
 
 .bottom_scroll_container > div > p {
@@ -244,6 +247,14 @@
 	top: 0;
     left: 0;
     border-radius: 10px; 
+    width: 100%; 
+    height: 100%;
+    display: flex; 
+    flex-direction: column; 
+}
+
+.back > p, .back > button {
+    margin-top: 10px; 
 }
 
 /* front pane, placed above back */
@@ -255,16 +266,14 @@
 
 /* back, initially hidden pane */
 .back {
-	transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    overflow: hidden;
 }
 
 .back {
-    /* display: flex;  */
-    /* flex-direction: column;  */
     margin: auto; 
     width: 100%; 
     height: 100%;
-    /* position: absolute; */
     background: rgb(6, 79, 119); 
 }
 
@@ -298,19 +307,11 @@
     .type_header_top {
         font-size: 24px;      
     }
-    .scroll_child {
-        width: 150px; 
-        height: 80%;
-    }
     .flip_container {
         width: 100%; 
         height: 100%; 
     }
-    .front, .back {
-        width: 150px; 
+    .front, .back, .back > button {
+        font-size: 10px; 
     }
-    /* .main_image {
-        max-width: 50%;
-        max-height: 60%; 
-    } */
 }
