--- a/src/components/Event/EventHeader.scss
+++ b/src/components/Event/EventHeader.scss
@@ -62,6 +62,12 @@
     justify-content: space-evenly; 
 }
 
+.title_bottom > img {
+    max-width: 60px; 
+    max-height: 60px; 
+    margin-right: 10px; 
+}
+
 //Attendance
 
 .attend_container {
