--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -8,29 +8,37 @@ body {
     font-family: $mono;
     width: 94%;
 
-    margin: 20px auto 0 auto;
+    margin: 12px auto 0 auto;
 
     .dashboard-top-box {
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        // display: flex;
+        // justify-content: space-between;
+        // align-items: center;
 
         a {
-            width: 20%;
+            width: 25%;
+            display: inline-block;
         }
         button {
             width: 100%;
-            background-color: lightblue;
+            border: none;
+            height: 30px;
+            border-radius: 2px;
+            font-family: $sans;
+            font-weight: bold;
+            font-size: 16px;
         }
         
         h1 {
-            font-size: 24px;
-            width: 55%;
+            font-size: 30px;
+            width: 100%;
             text-align: center;
             font-weight: bold;
-            color: $teal;
-            border-bottom: 3px solid #27E5E9;
+            color: #fff;
+            // border-bottom: 3px solid #27E5E9;
+            margin-bottom: 16px;
+            margin-top: 12px;
         }
         .dashboard-top-box-filler {
             width: 20%;
